[package]
name = "knls"
version = "0.1.4"
edition = "2021"

[features]
ingress = []

[profile.release]
opt-level = "s"
lto = true
debug = false
panic = "abort"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive", "env"] }
defguard_wireguard_rs = { version = "0.4.7", path = "./wireguard-rs" }
env_logger = "0.11.5"
eyre = "0.6.12"
futures = "0.3.30"
gethostname = "0.5.0"
hex = "0.4.3"
http = "1.1.0"
hxdmp = "0.2.1"
itertools = "0.13.0"
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
kube = { version = "0.98.0", features = ["aws-lc-rs", "runtime"] }
log = "0.4.22"
netlink-packet-route = "0.19.0"
rtnetlink = "0.14.1"
serde = { version = "1.0.208", features = ["derive", "rc"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
urandom = "0.2.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

