[package]
name = "knls"
version = "0.2.0"
edition = "2024"

[features]
ingress = []

[profile.release]
opt-level = "s"
lto = true
debug = false
panic = "abort"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive", "env"] }
defguard_wireguard_rs = { version = "0.7.6", path = "./wireguard-rs" }
env_logger = "0.11.5"
eyre = "0.6.12"
futures = "0.3.30"
gethostname = "1.0.2"
hex = "0.4.3"
http = "1.1.0"
hxdmp = "0.2.1"
itertools = "0.14.0"
k8s-openapi = { version = "0.26.0", features = ["earliest"] }
kube = { version = "2.0.0", features = ["aws-lc-rs", "runtime"] }
log = "0.4.22"
netlink-packet-route = "0.25.1"
rtnetlink = "0.18.1"
serde = { version = "1.0.208", features = ["derive", "rc"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.39.3", features = ["full"] }
urandom = "0.2.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

